# MCPC_dissect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VarUtils.c  VarUtils.h  mcpc.c  mcpc.h  protocol.c  protocol.h  protocol_constants.c  protocol_constants.h  protocol_tree.c  protocol_tree.h  protocol_tree_internal.h  protocol_tree_play.c
